Testing to see if min-height: 100vh in main attributes to the whitespace issue in the Gallery for iOS.

--- a/styles/main.css
+++ b/styles/main.css
@@ -102,9 +102,9 @@ body {
     position: relative;
 }
 
-main {
+/* main {
     min-height: 100vh;
-}
+} */
 
 /* ======================================================================
  * NAVIGATION BAR
